--- a/drag-drop-swipe-recyclerview-sample/src/main/AndroidManifest.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.movemedical.recyclerview.sample.MainActivity"
+            android:name="com.movemedical.recyclerview.sample.view.ui.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
