--- a/drag-drop-swipe-recyclerview/build.gradle
+++ b/drag-drop-swipe-recyclerview/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.movemedical.movemobile'
 
 android {
     compileSdkVersion 29
@@ -9,8 +12,8 @@ android {
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 13
-        versionName "0.1"
+        versionCode 14
+        versionName "0.2"
     }
 
     buildTypes {
@@ -27,6 +30,7 @@ android {
     dataBinding {
         enabled = true
     }
+    buildToolsVersion = '29.0.3'
 }
 
 dependencies {
@@ -35,5 +39,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.recyclerview:recyclerview:1.1.0-beta05'
+    api 'androidx.recyclerview:recyclerview:1.1.0'
+}
+
+repositories {
+    mavenCentral()
 }
