--- a/drag-drop-swipe-recyclerview-sample/src/main/AndroidManifest.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.movemedical.recyclerview.sample">
+    package="com.ernestoyaquello.recyclerview.sample">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.movemedical.recyclerview.sample.view.ui.MainActivity"
+            android:name="com.ernestoyaquello.recyclerview.sample.view.ui.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
